tests/toy/neg/000526_mutation.toylang
program a = { a = a + else a; } .
